--- a/proyecto2/booking.html
+++ b/proyecto2/booking.html
@@ -82,15 +82,15 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <!--<a href="about.html" class="nav-item nav-link">About</a>-->
+                <!--<a href="service.html" class="nav-item nav-link">Services</a>-->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">filtros</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="booking.html" class="dropdown-item active">Booking</a>
-                        <a href="team.html" class="dropdown-item">Technicians</a>
-                        <a href="testimonial.html" class="dropdown-item">Por género</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="booking.html" class="dropdown-item">Por titulos</a>
+                        <a href="team.html" class="dropdown-item">Por actores</a>
+                        <a href="testimonial.html" class="dropdown-item">Por géneros</a>
+                        <a href="service.html" class="dropdown-item">Por duración</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -108,9 +108,9 @@
                 <h1 class="display-3 text-white mb-3 animated slideInDown">Busqueda por Titulos</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Booking</li>
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="#">Filtros</a></li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Por titulos</li>
                     </ol>
                 </nav>
             </div>
@@ -167,41 +167,41 @@
             <div class="row gx-5">
                 <div class="col-lg-6 py-5">
                     <div class="py-5">
-                        <h1 class="text-white mb-4">Certified and Award Winning Car Repair Service Provider</h1>
-                        <p class="text-white mb-0">Eirmod sed tempor lorem ut dolores. Aliquyam sit sadipscing kasd ipsum. Dolor ea et dolore et at sea ea at dolor, justo ipsum duo rebum sea invidunt voluptua. Eos vero eos vero ea et dolore eirmod et. Dolores diam duo invidunt lorem. Elitr ut dolores magna sit. Sea dolore sanctus sed et. Takimata takimata sanctus sed.</p>
+                        <h1 class="text-white mb-4">Consultanos</h1>
+                        <p class="text-white mb-0">Directamente a nuestro personal, o incluso sugierenos mejoras para la página Web. Estamos comprometidos en mejor.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-primary h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn" data-wow-delay="0.6s">
-                        <h1 class="text-white mb-4">Book For A Service</h1>
+                        <h1 class="text-white mb-4">Solicitar servicios</h1>
                         <form>
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;">
+                                    <input type="text" class="form-control border-0" placeholder="Tu nombre" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;">
+                                    <input type="email" class="form-control border-0" placeholder="Tu Email" style="height: 55px;">
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
+                                        <option selected>Seleciona un servicio</option>
+                                        <option value="1">Consulta</option>
+                                        <option value="2">Sugerencia</option>
+                                        <option value="3">Reclamo</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     <div class="date" id="date1" data-target-input="nearest">
                                         <input type="text"
                                             class="form-control border-0 datetimepicker-input"
-                                            placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;">
+                                            placeholder="Fecha de respuesta" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;">
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Request"></textarea>
+                                    <textarea class="form-control border-0" placeholder="Requerimiento"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn btn-secondary w-100 py-3" type="submit">Book Now</button>
+                                    <button class="btn btn-secondary w-100 py-3" type="submit">Enviar ahora</button>
                                 </div>
                             </div>
                         </form>
@@ -218,14 +218,14 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-8 col-md-6">
-                    <h6 class="text-primary text-uppercase">// Call To Action //</h6>
-                    <h1 class="mb-4">Have Any Pre Booking Question?</h1>
-                    <p class="mb-0">Lorem diam ea sit dolor labore. Clita et dolor erat sed est lorem sed et sit. Diam sed duo magna erat et stet clita ea magna ea sed, sit labore magna lorem tempor justo rebum dolores. Eos dolor sea erat amet et, lorem labore lorem at dolores. Stet ea ut justo et, clita et et ipsum diam.</p>
+                    <h6 class="text-primary text-uppercase">// LLamado a la acción //</h6>
+                    <h1 class="mb-4">Tienes alguna consulta?</h1>
+                    <p class="mb-0">Si tu consulta es urgente, escribenos directamente a nuestro WhatsApp y en breve te atenderemos.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary d-flex flex-column justify-content-center text-center h-100 p-4">
-                        <h3 class="text-white mb-4"><i class="fa fa-phone-alt me-3"></i>+012 345 6789</h3>
-                        <a href="" class="btn btn-secondary py-3 px-5">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
+                        <h3 class="text-white mb-4"><i class="fa fa-phone-alt me-3"></i>+593987605705</h3>
+                        <a href="https://wa.me/+593987605705" target="_blank" class="btn btn-secondary py-3 px-5">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
                     </div>
                 </div>
             </div>
@@ -239,10 +239,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h4 class="text-light mb-4">Calle</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Guayaquil, Ecuador</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+593 987605705</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>trburgos@espol.edu.ec</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -251,23 +251,22 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Friday:</h6>
+                    <h4 class="text-light mb-4">Hora de aperturas</h4>
+                    <h6 class="text-light">Lunes-Viernes:</h6>
                     <p class="mb-4">09.00 AM - 09.00 PM</p>
-                    <h6 class="text-light">Saturday - Sunday:</h6>
+                    <h6 class="text-light">Saturday:</h6>
                     <p class="mb-0">09.00 AM - 12.00 PM</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Diagnostic Test</a>
-                    <a class="btn btn-link" href="">Engine Servicing</a>
-                    <a class="btn btn-link" href="">Tires Replacement</a>
-                    <a class="btn btn-link" href="">Oil Changing</a>
-                    <a class="btn btn-link" href="">Vacuam Cleaning</a>
+                    <h4 class="text-light mb-4">Servicios</h4>
+                    <a class="btn btn-link" href="">Consultas de futuras series</a>
+                    <a class="btn btn-link" href="">Realización páginas web</a>
+                    <a class="btn btn-link" href="">Asesoramiento de proyectos</a>
+                    <a class="btn btn-link" href="">Manejos de bases de datos</a>                    
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <h4 class="text-light mb-4">Escribenos</h4>
+                    <p>Dejanos tu correo y te escribiremos lo más pronto posible</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
