--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -84,15 +84,15 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <!--<a href="about.html" class="nav-item nav-link">About</a>-->
+                <!--<a href="service.html" class="nav-item nav-link">Services</a>-->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">filtros</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="booking.html" class="dropdown-item">Booking</a>
-                        <a href="team.html" class="dropdown-item">Technicians</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="booking.html" class="dropdown-item">Por titulos</a>
+                        <a href="team.html" class="dropdown-item">Por actores</a>
+                        <a href="testimonial.html" class="dropdown-item">Por géneros</a>
+                        <a href="service.html" class="dropdown-item">Por duración</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -325,7 +325,7 @@
                                     <p class="mb-4">Al dar clic en "LEER MÁS podras ver la lista de series y peliculas"</p>
                                     <p><i class="fa fa-check text-success me-3"></i>Lista Actualizada</p>
                                     <p><i class="fa fa-check text-success me-3"></i>2022</p>                                    
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
+                                    <a href="booking.html" class="btn btn-primary py-3 px-5 mt-3">Ver<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                                     <p class="mb-4">Aqui podrás ver en que peliculas participa tú actor favorito</p>
                                     <p><i class="fa fa-check text-success me-3"></i>Lista Actualizada</p>
                                     <p><i class="fa fa-check text-success me-3"></i>Año: 2022</p>                                    
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Leer más<i class="fa fa-arrow-right ms-3"></i></a>
+                                    <a href="team.html" class="btn btn-primary py-3 px-5 mt-3">Leer más<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -359,7 +359,7 @@
                                     <p class="mb-4">O puedes también buscar tus peliculas favoritas acorde a tu género favorito</p>
                                     <p><i class="fa fa-check text-success me-3"></i>Lista Actualizada</p>
                                     <p><i class="fa fa-check text-success me-3"></i>Año: 2022</p>                                    
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Leer más<i class="fa fa-arrow-right ms-3"></i></a>
+                                    <a href="testimonial.html" class="btn btn-primary py-3 px-5 mt-3">Leer más<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -377,7 +377,7 @@
                                     <p><i class="fa fa-check text-success me-3"></i>Series de 2 temporadas</p>
                                     <p><i class="fa fa-check text-success me-3"></i>Series de entre 3 y 5 temporadas</p>
                                     <p><i class="fa fa-check text-success me-3"></i>Series de más de 5 temporadas</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Leer más<i class="fa fa-arrow-right ms-3"></i></a>
+                                    <a href="service.html" class="btn btn-primary py-3 px-5 mt-3">Leer más<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -570,10 +570,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h4 class="text-light mb-4">Calle</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Guayaquil, Ecuador</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+593 987605705</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>trburgos@espol.edu.ec</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -582,23 +582,22 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Friday:</h6>
+                    <h4 class="text-light mb-4">Hora de aperturas</h4>
+                    <h6 class="text-light">Lunes-Viernes:</h6>
                     <p class="mb-4">09.00 AM - 09.00 PM</p>
-                    <h6 class="text-light">Saturday - Sunday:</h6>
+                    <h6 class="text-light">Saturday:</h6>
                     <p class="mb-0">09.00 AM - 12.00 PM</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Diagnostic Test</a>
-                    <a class="btn btn-link" href="">Engine Servicing</a>
-                    <a class="btn btn-link" href="">Tires Replacement</a>
-                    <a class="btn btn-link" href="">Oil Changing</a>
-                    <a class="btn btn-link" href="">Vacuam Cleaning</a>
+                    <h4 class="text-light mb-4">Servicios</h4>
+                    <a class="btn btn-link" href="">Consultas de futuras series</a>
+                    <a class="btn btn-link" href="">Realización páginas web</a>
+                    <a class="btn btn-link" href="">Asesoramiento de proyectos</a>
+                    <a class="btn btn-link" href="">Manejos de bases de datos</a>                    
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <h4 class="text-light mb-4">Escribenos</h4>
+                    <p>Dejanos tu correo y te escribiremos lo más pronto posible</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
