--- a/proyecto2/team.html
+++ b/proyecto2/team.html
@@ -83,15 +83,15 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <!--<a href="about.html" class="nav-item nav-link">About</a>-->
+                <!--<a href="service.html" class="nav-item nav-link">Services</a>-->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">filtros</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="booking.html" class="dropdown-item">Booking</a>
-                        <a href="team.html" class="dropdown-item active">Technicians</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="booking.html" class="dropdown-item">Por titulos</a>
+                        <a href="team.html" class="dropdown-item">Por actores</a>
+                        <a href="testimonial.html" class="dropdown-item">Por géneros</a>
+                        <a href="service.html" class="dropdown-item">Por duración</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -106,12 +106,12 @@
     <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-2.jpg);">
         <div class="container-fluid page-header-inner py-5">
             <div class="container text-center">
-                <h1 class="display-3 text-white mb-3 animated slideInDown">Technicians</h1>
+                <h1 class="display-3 text-white mb-3 animated slideInDown">Busqueda por actores</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Technicians</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Por actores</li>
                     </ol>
                 </nav>
             </div>
@@ -273,10 +273,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h4 class="text-light mb-4">Calle</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Guayaquil, Ecuador</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+593 987605705</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>trburgos@espol.edu.ec</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -285,23 +285,22 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Friday:</h6>
+                    <h4 class="text-light mb-4">Hora de aperturas</h4>
+                    <h6 class="text-light">Lunes-Viernes:</h6>
                     <p class="mb-4">09.00 AM - 09.00 PM</p>
-                    <h6 class="text-light">Saturday - Sunday:</h6>
+                    <h6 class="text-light">Saturday:</h6>
                     <p class="mb-0">09.00 AM - 12.00 PM</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Diagnostic Test</a>
-                    <a class="btn btn-link" href="">Engine Servicing</a>
-                    <a class="btn btn-link" href="">Tires Replacement</a>
-                    <a class="btn btn-link" href="">Oil Changing</a>
-                    <a class="btn btn-link" href="">Vacuam Cleaning</a>
+                    <h4 class="text-light mb-4">Servicios</h4>
+                    <a class="btn btn-link" href="">Consultas de futuras series</a>
+                    <a class="btn btn-link" href="">Realización páginas web</a>
+                    <a class="btn btn-link" href="">Asesoramiento de proyectos</a>
+                    <a class="btn btn-link" href="">Manejos de bases de datos</a>                    
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <h4 class="text-light mb-4">Escribenos</h4>
+                    <p>Dejanos tu correo y te escribiremos lo más pronto posible</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
